--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <div id="wrap" class="flex" data-align="vertical" >
+    <div id="wrap" class="flex" data-align="horizon" >
         
         <!-- 
             - Layout 구조변경
