--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LAYOUT</title>
     <link rel="stylesheet" type="text/css" href="css/import.css">
-    <!-- <script src="js/jquery.3.3.1.js"></script> -->
     <script src="js/component.js"></script>   
 </head>
 <body>
@@ -186,7 +185,7 @@
             </div>                       
 
             <div class="container content p15">
-                <div class="btn-group">
+                <!-- <div class="btn-group">
                     <button>Agensgraph</button>
                     <button class="primary">Agensgraph</button>
                     <button class="warning">Agensgraph</button>
@@ -198,7 +197,9 @@
                     <button class="btn-border primary">Agensgraph</button>
                     <button class="btn-border warning">Agensgraph</button>
                     <button class="btn-border danger">Agensgraph</button>
-                </div>
+                </div> -->
+                
+                
             </div>
 
             <div class="container footer">
