아이콘 추가

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
                     <h1><strong>Bitnine UX/UI</strong></h1>
                 </div>
 
-                <div class="sch-box">
-                    <input type="text" placeholder="SEARCH" />
-                    <input type="button" value="search" />
+                <div class="sch-box lg ml-20">
+                    <form>
+                        <input type="text" placeholder="SEARCH" />
+                        <input type="button" value="search" />
+                    </form>
                 </div>
 
                 <div class="btn-group ml-auto mr-20">
@@ -53,7 +55,20 @@
                 nav-link 에 맞는 container-wrap 에는 hidden 클레스 제거하면 페이지 활성화 
             -->
             <aside>
-
+                <ul class="nav">
+                    <li>
+                        <a href="">cards</a>
+                    </li>
+                    <li>
+                        <a href="">Buttons</a>
+                    </li>
+                    <li>
+                        <a href="">Forms</a>
+                    </li>
+                    <li>
+                        <a href="">Graph</a>
+                    </li>
+                </ul>
             </aside>
             <div>
 
