화면수정진행

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <main>
             <div id="sidebar"></div>            
             <div id="content"></div>
+            <div id="anchor" class="anchor-box"></div>
         </main>
     </div>
     
