--- a/html/button.html
+++ b/html/button.html
@@ -1,3 +1,4 @@
+
 <div class="h-full overflow-y-auto">
     <div class="flex">
         <div class="card">
@@ -19,7 +20,18 @@
                             <button class="btn">Default</button>
                         </div>
                     </div>
-                    <div></div>
+                    <div>
+                        <pre>
+                            <code>            
+                                addEventListener('load', () => {
+                                    const code = document.querySelector('#code');
+                                    const worker = new Worker('worker.js');
+                                    worker.onmessage = (event) => { code.innerHTML = event.data; }
+                                    worker.postMessage(code.textContent);
+                                  });      
+                            </code>
+                        </pre>
+                    </div>
                 </div>
     
                 <div id="classBtn" class="mt-10">
@@ -210,3 +222,5 @@
         </div>
     </div>
 </div>
+
+
